# qingputer

./: .gitignore  README.md
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: commands.toml
desktop/src-tauri/src/: main.rs
docs/: api-contract.md  architecture.md  policy-matrix.md  qingflow-mcp-execution-chain.md
mobile/: capacitor.config.ts  package-lock.json  package.json  relay-bridge.mjs
qingcode/: pyproject.toml
qingcode/app/: config.py  main.py
qingcode/app/agent/: engine.py
qingcode/app/api/: server.py
qingcode/app/models/: schemas.py
qingcode/app/storage/: database.py  qingputer_settings.py
qingcode/tests/: test_api_server.py
relay/: package-lock.json  package.json
runtime/: pyproject.toml
runtime/app/: __init__.py  config.py  main.py
runtime/app/agent/: __init__.py  loop 2.py  loop.py  prompts.py  provider.py
runtime/app/api/: server.py
runtime/app/capabilities/: __init__.py  browser.py  filesystem.py  mcp.py  router.py  terminal.py
runtime/app/mcp/: manager.py
runtime/app/models/: __init__.py  schemas.py
runtime/app/policy/: __init__.py  engine.py
runtime/app/qingflow/: __init__.py  auth.py
runtime/app/session/: manager.py
runtime/app/skills/: service.py
runtime/app/storage/: __init__.py  audit.py  database.py  keychain.py  paths.py
runtime/tests/: test_agent_loop.py  test_api_server.py  test_filesystem.py  test_mcp_manager.py  test_policy_engine.py  test_provider.py  test_qingflow_auth_manager.py  test_secret_store.py  test_session_manager.py  test_session_persistence.py  test_skills.py
scripts/: build-qingcode-macos-arm64.sh  build-runtime-macos-arm64.sh  (+1 more)
(+47 files in other folders)
