[project]
name = "qingcode-runtime"
version = "0.1.0"
description = "QingCode runtime sidecar – AI coding agent powered by OpenHands SDK."
requires-python = ">=3.12"
dependencies = [
  "openhands-ai>=0.27.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "keyring>=25.0.0,<26.0.0",
  "websockets>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
