[project]
name = "qingputer-runtime"
version = "0.1.0"
description = "Python runtime sidecar for the Qingputer desktop agent."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "keyring>=25.0.0,<26.0.0",
  "langgraph>=0.2.60,<1.0.0",
  "pexpect>=4.9.0,<5.0.0",
  "playwright>=1.49.0,<2.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "rsa>=4.9,<5.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
