[package]
name = "qingputer-desktop"
version = "0.1.0"
description = "Tauri shell for Qingputer."
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri = { version = "2.0.0", features = [] }
